fix: назвать по БЭМ

--- a/blocks/edit-form/__container/edit-form__container.css
+++ b/blocks/edit-form/__container/edit-form__container.css
@@ -1,11 +1,11 @@
-.edif-form__container {
+.edit-form__container {
     position: relative;
     min-width: 470px;
     top: -35vh;
 }
 
 @media screen and (max-width: 649px) {
-    .edif-form__container {
+    .edit-form__container {
         min-width: 282px;
         display: flex;
         flex-direction: column;
