--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,17 +1,15 @@
 .element__like {
-    width: 22px;
-    height: 19px;
+    min-width: 22px;
+    min-height: 19px;
     background-image: url(../../../images/Like.svg);
+    background-color: #fff;    
     background-repeat: no-repeat;
     background-position: bottom;
-    transition: background-image .2s linear;
+    transition: opacity .2s linear;
+    border: 0;
     cursor: pointer;
 }
 
 .element__like:hover {
-    background-image: url(../../../images/like_hover.svg);
-    background-repeat: no-repeat;
-    box-sizing: border-box;
-    width: 22px;
-    height: 19px;
+    opacity: 0.5;
 }
