--- a/blocks/element/__text/element__text.css
+++ b/blocks/element/__text/element__text.css
@@ -1,8 +1,8 @@
 .element__text {
     display: flex;
     justify-content: space-between;
-    max-width: calc(246px - 22px);
-    font-family: "Inter";
+    max-width: calc(241px - 22px);
+    font-family: "Inter", Arial, Helvetica, sans-serif;
     font-size: 24px;
     font-weight: 900;
     line-height: 29px;
