--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,14 +1,7 @@
 .element {
-    max-width: 282px;
+    min-width: 282px;
     background-color: #fff;
-    border-radius: 15px;
+    border-radius: 10px;
     padding: 0;
     margin: 0;
-}
-
-@media screen and (min-width: 650px) and (max-width: 900px) {
-    .element {
-        max-width: 282px;
-        margin: 0 auto;
-    }
 }
