--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,26 +1,31 @@
-.popup-container__button {
+.popup__button {
     min-width: 358px;
     min-height: 50px;
-    font-family: "Inter";
+    font-family: "Inter",Arial, Helvetica, sans-serif;
     font-size: 18px;
     line-height: 22px;
     font-weight: 400;
     color: #fff;
     background-color: #000;
     border: 0;
+    border-radius: 2px;
     padding: 0;
     margin: 0 auto 37px;
     cursor: pointer;
     transition: opacity .2s linear;
 }
 
-.popup-container__button:hover {
+.popup__button:hover {
     opacity: 0.8;
     cursor: pointer;
 }
 
 @media screen and (max-width: 649px) {
-    .popup-container__button {
+    .popup__button {
         min-width: 238px;
+        min-height: 46px;
+        font-size: 14px;
+        line-height: 17px;
+        margin: 0 auto 25px;
     }
 }
