--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,6 +1,5 @@
-.popup-container {
+.popup__form {
     position: absolute;
-    top: 10vh;
     left: 0;
     display: flex;
     flex-direction: column;
@@ -9,12 +8,11 @@
     min-height: 330px;
     background-color: #fff;
     margin: 0 auto;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 
 @media screen and (max-width: 649px) {
-    .popup-container {
-        top: 2vh;
+    .popup__form {
         max-width: 282px;
     }
 }
