--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,15 +1,17 @@
-.popup-container__title {
-    font-family: "Inter";
+.popup__title {
+    min-width: 358px;
+    font-family: "Inter", Arial, Helvetica, sans-serif;
     font-size: 24px;
     line-height: 29px;
     font-weight: 900;
     color: #000;
     padding: 0;
-    margin: 34px auto 54px;
+    margin: 34px 0 54px;
 }
 
 @media screen and (max-width: 649px) {
-    .popup-container__title {
+    .popup__title {
+        min-width: 238px;
         font-size: 18px;
         line-height: 22px;
         margin: 25px auto 75px;
