--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,41 +1,29 @@
 .profile__add-button {
-    background-image: url(../../../images/Add_Button.svg);
-    background-color: #000;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     min-width: 150px;
-    height: 50px;
+    min-height: 50px;
+    background-color: #000;
     cursor: pointer;
-    border: 0;
+    border: 1px solid #fff;
     margin: 0;
     padding: 0;
-    transition: background-image .2s linear;
+    transition: opacity .2s linear;
 }
 
 .profile__add-button:hover {
-    background-image: url(../../../images/Add_Button_hover.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    border: 0;
+    opacity: 0.5;
     cursor: pointer;
 }
 
 @media screen and (max-width: 649px) {
     .profile__add-button {
-        background-image: url(../../../images/Add_Button_width320.svg);
         min-width: 282px;
-        transition-duration: 0s;
-    }
+}
 
     .profile__add-button:hover {
-        min-width: 282px;
-        min-height: 50px;
-        background-image: url(../../../images/Add_Button_width320.svg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        border: 0;
+        opacity: 0.5;
         cursor: pointer;
     }
 }
