--- a/blocks/profile/__info-edit-button/profile__info-edit-button.css
+++ b/blocks/profile/__info-edit-button/profile__info-edit-button.css
@@ -6,22 +6,19 @@
     min-width: 24px;
     min-height: 24px;
     padding: 0;
-    margin: 0 0 16px 0;
+    margin: 0;
     border: 0;
     cursor: pointer;
-    transition: background-image .2s linear;
+    transition: opacity .2s linear;
 }
 
 .profile__info-edit-button:hover {
-    background-image: url(../../../images/Edit_Button_hover.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    border: 0;
+    opacity: 0.5;
 }
 
 @media screen and (max-width: 649px) {
     .profile__info-edit-button {
-        width: 18px;
-        height: 18px;
+        min-width: 18px;
+        min-height: 18px;
     }
 }
