--- a/blocks/profile/__info-subtitle/profile__info-subtitle.css
+++ b/blocks/profile/__info-subtitle/profile__info-subtitle.css
@@ -1,5 +1,5 @@
 .profile__info-subtitle {
-    font-family: "Inter";
+    font-family: "Inter",Arial, Helvetica, sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
