--- a/blocks/profile/__info-title/profile__info-title.css
+++ b/blocks/profile/__info-title/profile__info-title.css
@@ -1,9 +1,9 @@
 .profile__info-title {
-    font-family: "Inter";
+    font-family: "Inter",Arial, Helvetica, sans-serif;
     font-size: 42px;
     font-weight: 500;
     line-height: 48px;
-    margin: 0 18px 16px 0;
+    margin: 0 18px 0 0;
     padding: 0;
 }
 
@@ -17,6 +17,6 @@
     .profile__info-title {
         font-size: 27px;
         line-height: 33px;
-        margin: 0 10px 14px 0;
+        margin: 0 10px 0 0;
     }
 }
