--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 @import url(../vendor/normalize.css);
 
-@import url(../fonts/fonts.css);
+@import url(../vendor/fonts/fonts.css);
 
 @import url(../blocks/page/page.css);
 
@@ -16,6 +16,7 @@
 @import url(../blocks/profile/__info-edit-button/profile__info-edit-button.css);
 @import url(../blocks/profile/__info-subtitle/profile__info-subtitle.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__add-button/_plus/profile__add-button_plus.css);
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/__list/elements__list.css);
@@ -27,16 +28,13 @@
 @import url(../blocks/element/__like/element__like.css);
 
 @import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__copiright/footer__copyright.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
 
-@import url(../blocks/edit-form/edit-form.css);
-@import url(../blocks/edit-form/_opened/edit-form_opened.css);
-@import url(../blocks/edit-form/__close-icon/edit-form__close-icon.css);
-@import url(../blocks/edit-form/__container/edit-form__container.css);
-
-@import url(../blocks/popup-container/popup-container.css);
-@import url(../blocks/popup-container/__title/popup-container__title.css);
-@import url(../blocks/popup-container/__title/popup-container__title.css);
-@import url(../blocks/popup-container/__name/popup-container__name.css);
-@import url(../blocks/popup-container/__job/popup-container__job.css);
-@import url(../blocks/popup-container/__button/popup-container__button.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__close-icon/popup__close-icon.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
