--- a/blocks/profile/__info-top/profile__info-top.css
+++ b/blocks/profile/__info-top/profile__info-top.css
@@ -5,7 +5,7 @@
     margin: 0 auto 16px;
 }
 
-@media screen and (max-widht: 649px) {
+@media screen and (max-width: 649px) {
     .profile__info-top {
         margin: 0 auto 14px;
     }
