fix: Исправить после ревью №2

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -8,6 +8,7 @@
 
 @media screen and (max-width: 649px) {
     .elements {
-    margin: 0 auto 48px;
+        min-width: 282px;
+        margin: 0 auto 48px;
     }
 }
