--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -5,6 +5,7 @@
 
 @media screen and (max-width: 649px) {
     .profile__container {
+        max-width: 282px;
         flex-direction: column;
         margin: 0 auto 36px;
     }
