--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,8 @@
     max-width: 880px;
     border-bottom: 1px solid #545454;
     margin: 45px auto 40px;
+    padding: 0;
+    font-size: 0;
 }
 
 @media screen and (max-width: 649px) {
