--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -9,19 +9,21 @@
     padding: 0;
     margin: 0;
     border: 0;
-    top: 0;
-    right: 0;
+    top: -40px;
+    right: -40px;
     cursor: pointer;
     transition: opacity .2s linear;
 }
 
 .popup__close-icon:hover {
-    opacity: 0.5;
+    opacity: 0.6;
 }
 
 @media screen and (max-width: 649px) {
     .popup__close-icon {
         min-width: 20px;
         min-height: 20px;
+        top: -36px;
+        right: 0;
     }
 }
