--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,15 +1,14 @@
 .popup__container {
     position: relative;
     display: flex;
-    align-items: flex-end;
-    min-width: 470px;
-    min-height: 370px;
+    min-width: 430px;
+    max-height: 330px;
 }
 
 @media screen and (max-width: 649px) {
     .popup__container {
         flex-direction: column-reverse;
         min-width: 282px;
-        min-height: 358px;
+        min-height: 322px;
     }
 }
