--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,18 +1,9 @@
 .popup__form {
-    position: absolute;
-    left: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 430px;
-    min-height: 330px;
     background-color: #fff;
-    margin: 0 auto;
+    margin: 0;
+    padding: 0;
     border-radius: 10px;
-}
-
-@media screen and (max-width: 649px) {
-    .popup__form {
-        max-width: 282px;
-    }
 }
