--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,5 +1,6 @@
 .popup__input {
     min-width: 358px;
+    max-height: 14px;
     font-family: "Inter",Arial, Helvetica, sans-serif;
     font-size: 14px;
     line-height: 17px;
@@ -7,21 +8,22 @@
     color: #000;
     border: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 0 5px 12px;
-    margin: 0 31px 30px;
+    padding: 0 0 12px;
+    margin: 0 36px 30px;
+    outline: none;
 }
 
 .popup__input:last-of-type {
-    margin: 0 31px 48px;
+    margin: 0 36px 48px;
 }
 
 @media screen and (max-width: 649px) {
     .popup__input {
        min-width: 238px;
-       margin: 0 17px 30px;
+       margin: 0 22px 30px;
     }
 
     .popup__input:last-of-type {
-        margin: 0 17px 45px;
+        margin: 0 22px 45px;
     }
 }
