--- a/blocks/profile/__info-top/profile__info-top.css
+++ b/blocks/profile/__info-top/profile__info-top.css
@@ -2,11 +2,12 @@
     display: flex;
     justify-content:  center;
     align-items: center;
-    margin: 0 auto 16px;
+    margin: 0 0 16px;
 }
 
 @media screen and (max-width: 649px) {
     .profile__info-top {
+        max-width: 282px;
         margin: 0 auto 14px;
     }
 }
