--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 649px) {
     .profile {
-        min-width: 282px;
+        max-width: 282px;
         flex-direction: column;
         margin: 0 auto 36px;
     }
