--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,5 +1,8 @@
 .element__image {
-    max-width: 282px;
+    width: 282px;
+    height:282px;
+    box-sizing: border-box;
     border-radius: 10px 10px 0 0;
     margin: 0 auto;
+    cursor: pointer;
 }
