--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,3 +1,9 @@
 .popup_opened {
     display: flex;
+    opacity: 0;
+    transition: opacity .5s linear;
+}
+
+.popup_opened:hover {
+    opacity: 1;
 }
