fix: Исправить после ревью №4

--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,9 +1,4 @@
 .popup_opened {
-    display: flex;
-    opacity: 0;
-    transition: opacity .5s linear;
-}
-
-.popup_opened:hover {
+    visibility: visible;
     opacity: 1;
 }
