--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,5 +1,8 @@
 .popup__container {
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     min-width: 430px;
     max-height: 330px;
@@ -7,7 +10,7 @@
 
 @media screen and (max-width: 649px) {
     .popup__container {
-        flex-direction: column-reverse;
+        
         min-width: 282px;
         min-height: 322px;
     }
