--- a/blocks/popup/__image/popup__image.css
+++ b/blocks/popup/__image/popup__image.css
@@ -1,13 +1,5 @@
 .popup__image {
-    display: flex;
-    justify-content: center;
-    max-width: 100%;
+    max-width: 75vw;
     max-height: 75vh;
     margin: 0 auto;
-}
-
-@media screen and (max-width: 380px) {
-    .popup__image {
-        max-width: 240px;
-    }
 }
