--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,7 +1,4 @@
 .popup {
-    display: none;
-    justify-content: center;
-    align-items: center;
     position: fixed;
     width:100%;
     height:100%;
@@ -9,4 +6,7 @@
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .4s linear 0s;
 }
