feat: Добавить валидацию, и возможность закрывать попап через ecs и клик мыши вне поля попапа

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -6,11 +6,11 @@
     display: flex;
     min-width: 430px;
     max-height: 330px;
+    z-index: 2;
 }
 
 @media screen and (max-width: 649px) {
     .popup__container {
-        
         min-width: 282px;
         min-height: 322px;
     }
