--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,5 +1,8 @@
 .element {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     min-width: 282px;
     background-color: #fff;
     border-radius: 10px;
