--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -15,7 +15,7 @@
     transition: opacity .2s linear;
 }
 
-.popup__button:hover {
+.popup__button:valid:hover {
     opacity: 0.8;
     cursor: pointer;
 }
