--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -10,6 +10,10 @@
     margin: 0;
     padding: 0;
     transition: opacity .2s linear;
+    background-image: url(../../../images/Add-button-fullsize.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 22px;
 }
 
 .profile__add-button:hover {
@@ -20,5 +24,7 @@
 @media screen and (max-width: 649px) {
     .profile__add-button {
         min-width: 282px;
+        background-size: 16px;
+        background-image: url(../../../images/Add-button-mobile.png);
     }
 }
