--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -3,6 +3,7 @@
     top: 28px;
     margin: 0 36px;
     padding: 0;
+    border: 0;
     font-family: "Inter", Arial, Helvetica, sans-serif;
     font-size: 12px;
     line-height: 15px;
