--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,11 +2,11 @@
     max-width: 120px;
     min-height: 120px;
     border-radius: 50%;
-    margin-right: 30px;
+    transition: 0.2s linear;
 }
 
-@media screen and (max-width: 649px) {
-    .profile__avatar {
-        margin: 0 auto 26px;
-    }
+.profile__avatar:hover {
+    cursor: pointer;
+    background-color: #000;
+    opacity: 0.25;
 }
