--- a/main.css
+++ b/main.css
@@ -4,8 +4,9 @@
 .header{border-bottom:1px solid #545454;font-size:0;margin:45px auto 40px;max-width:880px;padding:0}@media screen and (max-width:649px){.header{margin:28px auto 42px}}
 .header__logo{margin:0 0 41px;max-width:142px;padding:0}@media screen and (max-width:649px){.header__logo{margin:0 0 31px 27px;max-width:104px}}
 .profile{align-items:center;display:flex;flex-direction:row;justify-content:space-between;margin:0 auto 50px}@media screen and (max-width:649px){.profile{flex-direction:column;margin:0 auto 36px;max-width:282px}}
-.profile__avatar{border-radius:50%;margin-right:30px;max-width:120px;min-height:120px}@media screen and (max-width:649px){.profile__avatar{margin:0 auto 26px}}
 .profile__container{align-items:center;display:flex}@media screen and (max-width:649px){.profile__container{flex-direction:column;margin:0 auto 36px;max-width:282px}}
+.profile__avatar{border-radius:50%;max-width:120px;min-height:120px;transition:.2s linear}.profile__avatar:hover{background-color:#000;cursor:pointer;opacity:.25}
+.profile__avatar-container{background-image:url(c263e2170b7d71227927.png);background-position:50%;background-repeat:no-repeat;display:flex;margin-right:30px}@media screen and (max-width:649px){.profile__avatar-container{margin:0 auto 26px}}
 .profile__info{align-items:flex-start;display:flex;flex-direction:column}@media screen and (max-width:649px){.profile__info{max-width:282px}}
 .profile__info-top{align-items:center;display:flex;justify-content:center;margin:0 0 16px}@media screen and (max-width:649px){.profile__info-top{margin:0 auto 14px;max-width:282px}}
 .profile__info-title{font-family:Inter,Arial,Helvetica,sans-serif;font-size:42px;font-weight:500;line-height:48px;margin:0 18px 0 0;max-width:500px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}@media screen and (min-width:650px) and (max-width:900px){.profile__info-title{font-size:28px;max-width:230px}}@media screen and (max-width:649px){.profile__info-title{font-size:27px;line-height:33px;margin:0 10px 0 28px;max-width:226px}}
@@ -21,6 +22,8 @@
 .element__text{color:#000;font-family:Inter,Arial,Helvetica,sans-serif;font-size:24px;font-weight:900;line-height:29px;margin:0;max-width:219px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}
 .element__like{background-color:#fff;background-image:url(1ad06e85f169668a1f36.svg);background-position:bottom;background-repeat:no-repeat;border:0;cursor:pointer;min-height:19px;min-width:22px;transition:opacity .2s linear}.element__like:hover{opacity:.5}
 .element__like_active{background:url(05ac72159691ffaa724f.png) no-repeat 50%;background-color:#fff;background-position:bottom;background-repeat:no-repeat;border:0;cursor:pointer;min-height:19px;min-width:22px;opacity:1;transition:opacity .2s linear}
+.element__like-container{display:flex;flex-direction:column;justify-content:space-between}
+.element__number-likes{border:0;color:#000;font-family:Inter,Arial,Helvetica,sans-serif;font-size:13px;font-weight:400;line-height:16px;margin:3px 0 0;padding:0;text-align:center}
 .footer{margin:0 auto 60px}@media screen and (max-width:649px){.footer{max-width:90%}}@media screen and (max-width:380px){.footer{margin:0 auto 36px;max-width:282px}}
 .footer__copyright{color:#545454;font-family:Inter,Arial,Helvetica,sans-serif;font-size:18px;font-weight:400;line-height:22px;margin:0;padding:0}@media screen and (max-width:649px){.footer__copyright{font-size:14px;line-height:17px}}
 .popup{background-color:rgba(0,0,0,.5);height:100%;left:0;opacity:0;position:fixed;top:0;transition:all .4s linear 0s;visibility:hidden;width:100%;z-index:1}
@@ -28,7 +31,7 @@
 .popup__button{background-color:#000;border:0;border-radius:2px;color:#fff;cursor:pointer;font-family:Inter,Arial,Helvetica,sans-serif;font-size:18px;font-weight:400;line-height:22px;margin:0 auto 37px;min-height:50px;min-width:358px;padding:0;transition:opacity .2s linear}.popup__button:valid:hover{cursor:pointer;opacity:.8}@media screen and (max-width:649px){.popup__button{font-size:14px;line-height:17px;margin:0 auto 25px;min-height:46px;min-width:238px}}
 .popup__button_disabled{background-color:#fff;border:1px solid #000;color:#000;opacity:.2}
 .popup__close-icon{background-color:transparent;background-image:url(039f1f5203f653b4bacd.svg);background-repeat:no-repeat;background-size:contain;border:0;cursor:pointer;margin:0;min-height:32px;min-width:32px;padding:0;position:absolute;right:-40px;top:-40px;transition:opacity .2s linear}.popup__close-icon:hover{opacity:.6}@media screen and (max-width:649px){.popup__close-icon{min-height:20px;min-width:20px;right:0;top:-36px}}
-.popup__container{display:flex;left:50%;max-height:330px;min-width:430px;position:absolute;top:50%;transform:translate(-50%,-50%);z-index:2}@media screen and (max-width:649px){.popup__container{min-height:322px;min-width:282px}}
+.popup__container{display:flex;flex-direction:column;left:50%;max-height:330px;min-width:430px;position:absolute;top:50%;transform:translate(-50%,-50%);z-index:2}@media screen and (max-width:649px){.popup__container{min-height:322px;min-width:282px}}
 .popup__wrapper-image{box-sizing:border-box;display:block;left:50%;max-height:75vh;max-width:75vw;position:absolute;top:50%;transform:translate(-50%,-50%);z-index:2}
 .popup__form{align-items:center;background-color:#fff;border-radius:10px;display:flex;flex-direction:column;margin:0;padding:0}
 .popup__field{display:flex;flex-direction:column;min-height:57px;position:relative}
@@ -36,9 +39,11 @@
 .popup__input{border:0;border-bottom:1px solid rgba(0,0,0,.2);color:#000;font-family:Inter,Arial,Helvetica,sans-serif;font-size:14px;font-weight:400;line-height:17px;margin:0 36px;max-height:14px;min-width:358px;outline:none;padding:0 0 12px}.popup__input:last-of-type{margin:0 36px}@media screen and (max-width:649px){.popup__input{margin:0 22px;min-width:238px}.popup__input:last-of-type{margin:0 22px}}
 .popup__input_type_error{border-bottom:1px solid red}
 .popup__input-error{border:0;color:red;font-family:Inter,Arial,Helvetica,sans-serif;font-size:12px;line-height:15px;margin:0 36px;padding:0;position:absolute;top:28px}@media screen and (max-width:649px){.popup__input-error{margin:0 22px}}
-.popup__title{color:#000;font-family:Inter,Arial,Helvetica,sans-serif;font-size:24px;font-weight:900;line-height:29px;margin:34px 0 50px;min-width:358px;padding:0}@media screen and (max-width:649px){.popup__title{font-size:18px;line-height:22px;margin:25px auto 75px;min-width:238px}}
+.popup__title{color:#000;font-family:Inter,Arial,Helvetica,sans-serif;font-size:24px;font-weight:900;line-height:29px;margin:34px 36px 50px;min-width:358px;padding:0}@media screen and (max-width:649px){.popup__title{font-size:18px;line-height:22px;margin:25px auto 75px;min-width:238px}}
+.popup__title_delete{margin:34px 36px 38px}
 .popup_opened{opacity:1;visibility:visible}
 .popup__image{margin:0 auto;max-height:75vh;max-width:75vw}
 .popup__subtitle{font-family:Inter,Arial,Helvetica,sans-serif;font-size:12px;font-weight:400;line-height:15px;margin:10px 0 0;padding:0}
 .popup__overlay{height:100%;left:0;position:fixed;top:0;width:100%;z-index:1}
+.popup__button_avatar{margin:18px 36px 37px}
 
